--- a/USF安装教程/初始化.md
+++ b/USF安装教程/初始化.md
@@ -10,4 +10,7 @@ _#以下教程适用于USF V2版本_
 - 进入存档，在聊天栏内根据提示输入 `/function get_owner` 获取插件最高权限(服务器内操作详见"没写好.md")
 
 3. 游戏内设置
-- 正在施工中~
+- 使用 `+cd`打开菜单，并按照如下步骤进行配置   
+   [菜单]→[管理界面]→[插件设置]  
+   <img src="../图片/reset1.jpg" width="50%">  
+   
