添加部分改动

--- a/USF安装教程/初始化.md
+++ b/USF安装教程/初始化.md
@@ -13,4 +13,12 @@ _#以下教程适用于USF V2版本_
 - 使用 `+cd`打开菜单，并按照如下步骤进行配置   
    [菜单]→[管理界面]→[插件设置]  
    <img src="../图片/reset1.jpg" width="50%">  
+
+   **管理界面**
+
+   <img src="../图片/reset2.jpg" width="50%">  
+
+   **插件设置**
+
+   找到[插件命令设置]，点击选择你需要的插件命令
    
